Update room block code and make same for en and es

--- a/index.html
+++ b/index.html
@@ -336,13 +336,14 @@
                         <p><strong>Emporio Cancún</strong><br />
                             Blvd. Kukulcan Km 17, Zona Hotelera<br />
                             Cancún, Quintana Roo 77500, Mexico</p>
+                        <p>Room block code: <strong>Grupo Bety & Lucas</strong></p>
                     </div>
                     <div class="lang-es hidden">
                         <h2>Alojamiento</h2>
                         <p><strong>Emporio Cancún</strong><br />
                             Blvd. Kukulcán Km 17, Zona Hotelera<br />
                             Cancún, Quintana Roo 77500, México</p>
-                        <p>Código para reservar: LUCAS-BEATRIZ</p>
+                        <p>Código para reservar: <strong>Grupo Bety & Lucas</strong></p>
                     </div>
                     <p style="font-size: 30px; text-align:center;" ;>🪇🚌🏨</h2>
                     <p class="lang-en">
@@ -362,7 +363,6 @@
                             experiencia
                             completa.</strong>
                     </p>
-                    <p>Room block code: LUCAS-BEATRIZ</p>
                 </div>
             </div>
         </div>
