--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                             Cancún, Quintana Roo 77500, México</p>
                         <p>Código para reservar: <strong>Grupo Bety & Lucas</strong></p>
                     </div>
-                    <p style="font-size: 30px; text-align:center;" ;>🪇🚌🏨</h2>
+                    <p style="font-size: 30px; text-align:center;" ;>🪅🚌🏨</h2>
                     <p class="lang-en">
                         🏨 We’ll be staying at <strong>Emporio Cancún </strong> — our home base for the weekend!
                         🚐 Transportation to the wedding and
