--- a/index.html
+++ b/index.html
@@ -993,6 +993,16 @@
                 hideIconModal size="4" language="es"></add-to-calendar-button>
         </div>
         <a class="rsvp-btn back-btn lang-es" id="back-to-invite-es" href="/rsvp">volver a la invitación</a>
+        <div id="fx" class="rsvp-block" style="text-align: center; justify-self:center;">
+            <iframe
+            class="rounded"
+            height=200
+            width=350
+            title="Xe FX widget"
+            src="https://www.xe.com/currencyconverter/fx-widget?amount=100&from=CAD&to=MXN"
+            frameborder="0"
+            ></iframe>
+        </div>
     </div>
     <div class="leaf-divider"></div>
     <section class="location" id="registry">
