--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 <div class="transport-card">
                     <h4><i class="fas fa-shuttle-van"></i> Hotel Shuttle</h4>
                     <p>Shuttles to Emporio are available for anyone in our group! 
-                        <a href="https://forms.gle/DvhSihraKimSxGjn6">Connect</a> with our shuttle expert, Arturo, and the rest is history ... (prices in MXN Pesos)
+                        <a href="https://forms.gle/DvhSihraKimSxGjn6">Connect</a> with our shuttle expert, Arturo, and the rest is history ... (prices in <a href="#fx">MXN Pesos</a>)
                     </p>
                 </div>
                 <div class="transport-card">
