--- a/index.html
+++ b/index.html
@@ -469,40 +469,34 @@
             </div>
             <div class="timeline-elegant">
                 <div class="timeline-event">
-                    <div class="icon">👨‍👩‍👧‍👦</div>
+                    <div class="icon">🧘‍♀️</div>
                     <div class="content">
                         <div class="time">Wednesday</div>
-                        <div class="info">Family arrives and settles in to Emporio Cancún<br><small>If you're in
-                                town
-                                early, we'd love to
-                                see you — but Wednesday is for family.</small></div>
+                        <div class="info">We're arriving! Get settled in at Emporio Cancún for a great start to the weekend.
+                        </div>
                     </div>
                 </div>
-
+                <div class="timeline-event">
+                    <div class="icon">👨‍👩‍👧‍👦</div>
+                    <div class="content">
+                        <div class="time">Thursday</div>
+                        <div class="info">Free day to relax and <a href="#activities">explore the
+                                area</a>. <small>We'd love to catch you by the pool or on the beach during the day, but Thursday night is for family.</small></div>
+                    </div>
+                </div>
                 <div class="timeline-event">
                     <div class="icon">🍹</div>
                     <div class="content">
-                        <div class="time">Thursday (Sunset)</div>
+                        <div class="time">Friday (Sunset)</div>
                         <div class="info">Icebreaker at the hotel: drinks, canapés, and mingling for all guests!
                         </div>
                     </div>
                 </div>
 
                 <div class="timeline-event">
-                    <div class="icon">🧘‍♀️</div>
-                    <div class="content">
-                        <div class="time">Friday</div>
-                        <div class="info">Free day to relax and <a href="#activities">explore the
-                                area</a><br><small>Don’t go too
-                                hard — Saturday is the
-                                main event!</small></div>
-                    </div>
-                </div>
-
-                <div class="timeline-event">
                     <div class="icon">🚐</div>
                     <div class="content">
-                        <div class="time">5:00 PM Saturday</div>
+                        <div class="time">4:00 PM Saturday</div>
                         <div class="info">Shuttles depart from Emporio to Jardín del Mar</div>
                     </div>
                 </div>
@@ -510,7 +504,7 @@
                 <div class="timeline-event">
                     <div class="icon">💍</div>
                     <div class="content">
-                        <div class="time">6:00 PM</div>
+                        <div class="time">5:00 PM</div>
                         <div class="info">Wedding Ceremony in the Jardín del Mar Chapel </div>
                     </div>
                 </div>
@@ -518,15 +512,15 @@
                 <div class="timeline-event">
                     <div class="icon">🍸</div>
                     <div class="content">
-                        <div class="time">7:00 PM</div>
-                        <div class="info">Cocktail Hour</div>
+                        <div class="time">6:00 PM</div>
+                        <div class="info">Cocktail Hour with mariachis</div>
                     </div>
                 </div>
 
                 <div class="timeline-event">
                     <div class="icon">🎷</div>
                     <div class="content">
-                        <div class="time">8:00 PM</div>
+                        <div class="time">7:00 PM</div>
                         <div class="info">Dinner with live saxophone</div>
                     </div>
                 </div>
@@ -534,7 +528,7 @@
                 <div class="timeline-event">
                     <div class="icon">💃</div>
                     <div class="content">
-                        <div class="time">10:00 PM</div>
+                        <div class="time">8:30 PM</div>
                         <div class="info">DJ and Dancing</div>
                     </div>
                 </div>
@@ -550,8 +544,8 @@
                 <div class="timeline-event">
                     <div class="icon">🌮</div>
                     <div class="content">
-                        <div class="time">1:00 AM</div>
-                        <div class="info">Mariachis + tacos</div>
+                        <div class="time">12:00 AM</div>
+                        <div class="info">Tacos</div>
                     </div>
                 </div>
 
@@ -591,34 +585,31 @@
                     <div class="icon">👨‍👩‍👧‍👦</div>
                     <div class="content">
                         <div class="time">Miércoles</div>
-                        <div class="info">La familia llega y se instala<br><small>Si ya estás en Cancún, ¡nos
-                                encantaría
-                                verte! Pero este día es exclusivo para la familia.</small></div>
-                    </div>
-                </div>
-
-                <div class="timeline-event">
-                    <div class="icon">🍹</div>
-                    <div class="content">
-                        <div class="time">Jueves (al atardecer)</div>
-                        <div class="info">Evento rompehielo en el hotel: bebidas, canapés y convivencia</div>
+                        <div class="info">Llegamos y nos instalamos</div>
                     </div>
                 </div>
 
                 <div class="timeline-event">
                     <div class="icon">🧘‍♀️</div>
                     <div class="content">
+                        <div class="time">Jueves</div>
+                        <div class="info">Día libre para descansar o <a href="#activities">explorar</a><br><small>Si ya estás en Cancún, ¡nos
+                                encantaría verte! Pero esta noche es exclusiva para la familia.</small></div>
+                    </div>
+                </div>
+
+                <div class="timeline-event">
+                    <div class="icon">🍹</div>
+                    <div class="content">
                         <div class="time">Viernes</div>
-                        <div class="info">Día libre para descansar o <a href="#activities">explorar</a><br><small>¡Pero
-                                no se excedan! El sábado
-                                se baila fuerte.</small></div>
+                        <div class="info">Evento rompehielo en el hotel: bebidas, canapés y convivencia</div>
                     </div>
                 </div>
 
                 <div class="timeline-event">
                     <div class="icon">🚐</div>
                     <div class="content">
-                        <div class="time">Sábado, 5:00 PM</div>
+                        <div class="time">Sábado, 4:00 PM</div>
                         <div class="info">El transporte saldrá desde el Emporio</div>
                     </div>
                 </div>
@@ -626,7 +617,7 @@
                 <div class="timeline-event">
                     <div class="icon">💍</div>
                     <div class="content">
-                        <div class="time">6:00 PM</div>
+                        <div class="time">5:00 PM</div>
                         <div class="info">Comienza la ceremonia</div>
                     </div>
                 </div>
@@ -634,15 +625,15 @@
                 <div class="timeline-event">
                     <div class="icon">🍸</div>
                     <div class="content">
-                        <div class="time">7:00 PM</div>
-                        <div class="info">Hora del cóctel</div>
+                        <div class="time">6:00 PM</div>
+                        <div class="info">Hora del cóctel con mariachis</div>
                     </div>
                 </div>
 
                 <div class="timeline-event">
                     <div class="icon">🎷</div>
                     <div class="content">
-                        <div class="time">8:00 PM</div>
+                        <div class="time">7:00 PM</div>
                         <div class="info">Cena con saxofón en vivo</div>
                     </div>
                 </div>
@@ -650,7 +641,7 @@
                 <div class="timeline-event">
                     <div class="icon">💃</div>
                     <div class="content">
-                        <div class="time">10:00 PM</div>
+                        <div class="time">8:30 PM</div>
                         <div class="info">Baile con DJ</div>
                     </div>
                 </div>
@@ -666,8 +657,8 @@
                 <div class="timeline-event">
                     <div class="icon">🌮</div>
                     <div class="content">
-                        <div class="time">1:00 AM</div>
-                        <div class="info">Mariachis y tacos</div>
+                        <div class="time">12:00 AM</div>
+                        <div class="info">Tacos</div>
                     </div>
                 </div>
 
