adde  instructions for booking hotel: TODO: add link when available

--- a/index.html
+++ b/index.html
@@ -337,6 +337,13 @@
                             Blvd. Kukulcan Km 17, Zona Hotelera<br />
                             Cancún, Quintana Roo 77500, Mexico</p>
                         <p>Room block code: <strong>Grupo Bety & Lucas</strong></p>
+                        <p>There are three different ways to reserve your stay at Hotel Emporio: 
+                            <ol>
+                                <li>email: <a href="mailto:cancun.gtreserv@hotelesemporio.com">cancun.gtreserv@hotelesemporio.com</a></li>
+                                <li>Phone:  +52 (998) 283-3800 -  Reservations department.</li>
+                                <li>On this link: *** </li>
+                            </ol>
+                        </p>
                     </div>
                     <div class="lang-es hidden">
                         <h2>Alojamiento</h2>
@@ -344,6 +351,13 @@
                             Blvd. Kukulcán Km 17, Zona Hotelera<br />
                             Cancún, Quintana Roo 77500, México</p>
                         <p>Código para reservar: <strong>Grupo Bety & Lucas</strong></p>
+                        <p>Hay tres formats de hacer la reservación en el Hotel Emporio
+                            <ol>
+                                <li>Email: <a href="mailto:cancun.gtreserv@hotelesemporio.com">cancun.gtreserv@hotelesemporio.com</a></li>
+                                <li>Por teléfono:  +52 (998) 283-3800 - Departamento de Reservaciones.</li>
+                                <li>En este enlace: ***</li>
+                            </ol>
+                        </p>
                     </div>
                     <p style="font-size: 30px; text-align:center;" ;>🪅🚌🏨</h2>
                     <p class="lang-en">
