Bety's bio updated and first draft of Lucas

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
                 <div class="about-card">
                     <img src="assets/photos/bety-doctor.jpg" alt="Bety at work" />
                     <h3>Beatriz</h3>
-                    <p>A dedicated doctor with a heart of gold (and nerves of steel). Beatriz is the calm in the
-                        storm,
-                        the first one to show up, and the last one dancing.</p>
+                    <p>Beatriz is a thoughtful, passionate soul. Born and raised in Mexico, she now lives in Canada, where she crossed paths with Lucas. She's a cardiologist and researcher who cares deeply about women's health, but she’s just as proud of her curly hair routine as she is of her academic work. </p>
+                    <p>When she’s not writing or at the hospital, you’ll likely find her at the gym chasing a new personal best, singing along to romantic songs, or enjoying a strong Americano (no milk, always). </p>
+                    <p>Beatriz is curious, driven, full of warmth—and brings heart and joy to everyone around her.</p>
                 </div>
                 <div class="about-card">
                     <img src="assets/photos/lucas-sax.jpg" alt="Lucas playing saxophone" />
@@ -181,6 +181,7 @@
                     <p>A saxophone wizard with a love for late-night jams and a good mezcal. Lucas brings the
                         groove,
                         the jokes, and just enough chaos to keep things fun.</p>
+                        <p>Planning this wedding (and this website!) has been a labour of love, with a lot of laughter, spreadsheets, and late-night whiteboarding. We're so grateful you're here and can't wait to celebrate with the people we love most</p>
                 </div>
             </div>
         </div>
@@ -189,14 +190,14 @@
             <h2>Sobre los Novios</h2>
             <p>Desde los pasillos del hospital hasta los escenarios de jazz — Beatriz y Lucas pueden parecer
                 opuestos,
-                pero su historia siempre ha seguido su propio ritmo.</p>
+                pero su historia siejmpre ha seguido su propio ritmo.</p>
             <div class="about-cards">
                 <div class="about-card">
                     <img src="assets/photos/bety-doctor.jpg" alt="Bety trabajando" />
                     <h3>Beatriz</h3>
-                    <p>Una doctora dedicada con un corazón de oro (y nervios de acero). Beatriz es calma en el caos,
-                        la
-                        primera en llegar y la última en dejar de bailar.</p>
+                    <p>Beatriz es un alma apasionada y atenta. Nacida en México y ahora viviendo en Toronto, fue ahí donde su camino se cruzó con el de Lucas. Bety es cardióloga y se dedica a la enseñanza e investigación en cardiopatías congénitas y salud cardiovascular en la mujer. Cuidar de sus rizos la hace tan orgullosa como su trabajo académico.</p>
+                    <p>Si no está en el hospital, probablemente la encuentres en el gimnasio intentando romper su personal best, cantando canciones románticas, o disfrutando un Americano (negro y sin azúcar, siempre).</p>
+                    <p>Bety es curiosa, determinada y llena de cariño… siempre trae corazón y alegría a todos a su alrededor.</p>
                 </div>
                 <div class="about-card">
                     <img src="assets/photos/lucas-sax.jpg" alt="Lucas tocando sax" />
@@ -864,18 +865,7 @@
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <span>🧑‍🤝‍🧑 6. I’m single or traveling solo, where can I meet others?</span>
-                </div>
-                <p>Great question! We know many of you are traveling solo or meeting new people for the first time.
-                    Feeling adventurous? 🎉 Share your <strong>Instagram profile</strong> below in the comments so
-                    others can connect with you before the big day!<br>
-                    <em>While we can’t officially embed profiles here, you can drop your <strong>@handle</strong> to
-                        connect with fellow guests.</em> 👉 Example: <strong>@yourusername</strong>
-                </p>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <span>🎁 7. What about gifts?</span>
+                    <span>🎁 6. What about gifts?</span>
                 </div>
                 <p>Your presence is the greatest gift we could ask for.<br>
                     If you would like to give something extra, <strong>see below for our wedding registry!</strong> ⬇️⬇️
@@ -949,18 +939,7 @@
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <span>🧑‍🤝‍🧑 6. Viajo solo/a, ¿dónde puedo conocer a otros invitados?</span>
-                </div>
-                <p>¡Gran pregunta! Sabemos que muchos viajan solos o conocerán gente nueva por primera vez. ¿Te animas?
-                    🎉 Comparte tu <strong>perfil de Instagram</strong> abajo en los comentarios para que otros puedan
-                    conectarse contigo antes del gran día.<br>
-                    <em>No podemos mostrar perfiles directamente aquí, pero puedes dejar tu <strong>@usuario</strong>
-                        para conectarte con otros invitados.</em> 👉 Ejemplo: <strong>@tusunombredeusuario</strong>
-                </p>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <span>🎁 7. ¿Qué pasa con los regalos?</span>
+                    <span>🎁 6. ¿Qué pasa con los regalos?</span>
                 </div>
                 <p>Su presencia es el mejor regalo que podemos recibir.<br>
                     Si desean hacernos un obsequio adicional, <strong>vean abajo nuestra mesa de regalos.</strong> ⬇️⬇️
