Added: Please see "the link" below for our wedding registry

--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
                     <span>🎁 6. ¿Qué pasa con los regalos?</span>
                 </div>
                 <p>Su presencia es el mejor regalo que podemos recibir.<br>
-                    Si desean hacernos un obsequio adicional, <strong>vean abajo nuestra mesa de regalos.</strong> ⬇️⬇️
+                    Si desean hacernos un obsequio adicional, <strong>vean abajo el link a nuestra mesa de regalos.</strong> ⬇️⬇️
                 </p>
 
             </div>
