Modified the description with Mariachis and tacos....

--- a/index.html
+++ b/index.html
@@ -257,22 +257,22 @@
                         as
                         the
                         sun
-                        sets over the Caribbean, followed by cocktails, dinner with live saxophone music, and
+                        sets over the Caribbean, followed by cocktails, mariachi, dinner with live saxophone music, and
                         dancing
                         under
                         the
                         stars.</p>
-                    <p>The evening will culminate with mariachis and tacos at 2am - a true Mexican fiesta!</p>
+                    <p>The evening will culminate with late night tacos - a true Mexican fiesta!</p>
                 </div>
                 <div class="lang-es hidden">
                     <h2>Nuestra Celebración</h2>
                     <p>Acompáñanos en una celebración mágica frente al mar en Jardín del Mar en Cancún.
                         Intercambiaremos
-                        nuestros votos mientras el sol se pone sobre el Caribe, seguido de cócteles, cena con música
+                        nuestros votos mientras el sol se pone sobre el Caribe, seguido de cócteles, mariachi, cena con música
                         de
                         saxofón
                         en vivo y baile bajo las estrellas.</p>
-                    <p>¡La noche culminará con mariachis y tacos a las 2am - una verdadera fiesta mexicana!</p>
+                    <p>¡La noche culminará con tacos para los desvelados - una verdadera fiesta mexicana!</p>
                 </div>
             </div>
             <!-- <div class="floral-divider floral-alt"></div> -->
@@ -868,7 +868,7 @@
                     <span>🎁 6. What about gifts?</span>
                 </div>
                 <p>Your presence is the greatest gift we could ask for.<br>
-                    If you would like to give something extra, <strong>see below for our wedding registry!</strong> ⬇️⬇️
+                    If you would like to give something extra, <strong>see below the link to our wedding registry!</strong> ⬇️⬇️
                 </p>
             </div>
         </div>
