--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <p class="lang-en">
                         🏨 We’ll be staying at <strong>Emporio Cancún </strong> — our home base for the weekend!
                         🚐 Transportation to the wedding and
-                        🍹 our Thursday icebreaker will happen here.
+                        🍹 our Friday icebreaker will happen here.
                         <strong>You’re free to stay elsewhere, but we recommend Emporio for the full
                             experience.</strong>
                     </p>
@@ -373,7 +373,7 @@
                         fin de
                         semana!
                         🚐 De aquí saldrá el transporte a la boda y
-                        🍹 también será la sede del rompehielo el jueves.
+                        🍹 también será la sede del rompehielo el viernes.
                         <strong>Puedes quedarte en otro lugar, pero te recomendamos Emporio para vivir la
                             experiencia
                             completa.</strong>
